--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Eat-Da-Burger App",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/Lolobrew/burger/issues"
   },
-  "homepage": "https://github.com/Lolobrew/burger#readme"
+  "homepage": "https://github.com/Lolobrew/burger#readme",
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "express-handlebars": "^3.0.0",
+    "method-override": "^2.3.9",
+    "mysql": "^2.13.0"
+  },
+  "devDependencies": {}
 }
